cluster/core/auth/resources/lldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: core-auth
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:v0.6.2
          ports:
            - containerPort: 3890
            - containerPort: 17170
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: core-auth
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - name: ldap
      port: 389
      targetPort: 3890
    - name: http
      port: 17170
      targetPort: 17170
