cluster/core/auth/resources/authelia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: core-auth
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: authelia
      port:
        number: 9091
  tls:
    - hosts:
        - authelia
